# scrapy_ott

./: .gitignore  README.md  pyproject.toml
amazon_scrapy/amazon_scrapy/: middlewares.py  settings.py
mercado_livre/mercado_livre/: settings.py
mercado_livre/mercado_livre/spiders/: mercado_livre.py
tests/: test_scrapy_ott.py
