[tool.poetry]
name = "scrapy_ott"
version = "0.1.0"
description = ""
authors = ["Paulo <pauloestrella1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
